force-app/main/default/Objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <description>The systematic process of collecting, analyzing, and interpreting information to determine the extent to which objectives are being achieved.</description>
    <label>Assessment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assessment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>