force-app/main/default/objects/Assessment__c/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <description>Drives Agentforce Action branching and before/after pairing.</description>
    <inlineHelpText>Drives Agentforce Action branching and before/after pairing.</inlineHelpText>
    <label>Assessment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Program</fullName>
            </value>
            <value>
                <fullName>Mid-Program</fullName>
            </value>
            <value>
                <fullName>Post-Program</fullName>
            </value>
            <value>
                <fullName>Skill-Check</fullName>
            </value>
            <value>
                <fullName>Penny-Coached-Review</fullName>
            </value>
            <value>
                <fullName>Coach-Observation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>