force-app/main/default/objects/Assessment__c/fields/Course_Module__c.field-meta.xml
<CustomField>
    <fullName>Course_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links assessment to the specific curriculum module it measures.</description>
    <inlineHelpText>Links assessment to the specific curriculum module it measures.</inlineHelpText>
    <label>Course Module</label>
    <referenceTo>Course_Module__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>