force-app/main/default/Objects/Assessment__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Defines the difficulty of the questions included in the assessment</description>
    <inlineHelpText>Defines the difficulty of the questions included in the assessment</inlineHelpText>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
                <default>true</default>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>