force-app/main/default/objects/Assessment__c/fields/Penny_Feedback_Summary__c.field-meta.xml
<CustomField>
    <fullName>Penny_Feedback_Summary__c</fullName>
    <description>Overall qualitative feedback written by Penny via Gemini after a Penny-Coached-Review assessment. Coach and admin read. Penny reads in subsequent coaching sessions.</description>
    <inlineHelpText>Overall qualitative feedback written by Penny via Gemini after a Penny-Coached-Review assessment. Coach and admin read. Penny reads in subsequent coaching sessions.</inlineHelpText>
    <label>Penny Feedback Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>