force-app/main/default/Objects/Assessment__c/fields/PercentCorrect__c.field-meta.xml
<CustomField>
    <fullName>PercentCorrect__c</fullName>
    <description>Percent Correct</description>
    <formula>IF( Total_Results__c &gt; 0,(ScoreCalc__c /Total_Results__c)*100,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percent correct</inlineHelpText>
    <label>Percent Correct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>