force-app/main/default/objects/Assessment__c/fields/Pre_Program_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Pre_Program_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>On Post-Program records, points to the matching Pre-Program assessment. Enables growth calculation.</description>
    <inlineHelpText>On Post-Program records, points to the matching Pre-Program assessment. Enables growth calculation.</inlineHelpText>
    <label>Pre Program Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>