force-app/main/default/objects/Assessment__c/fields/Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links assessments to learner&apos;s active program enrollment.</description>
    <inlineHelpText>Links assessments to learner&apos;s active program enrollment.</inlineHelpText>
    <label>Program Engagement</label>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>