force-app/main/default/Objects/Assessment__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Current score of the assessment</description>
    <inlineHelpText>Current score of the assessment</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>