force-app/main/default/Objects/Assessment__c/fields/ScoreCalc__c.field-meta.xml
<CustomField>
    <fullName>ScoreCalc__c</fullName>
    <label>Score</label>
    <summarizedField>Assessment_Result__c.Weight__c</summarizedField>
    <summaryForeignKey>Assessment_Result__c.Assessment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>