force-app/main/default/Objects/Assessment__c/fields/Total_Results__c.field-meta.xml
<CustomField>
    <fullName>Total_Results__c</fullName>
    <description>Total number of questions captured for the assessment</description>
    <inlineHelpText>Total number of questions captured for the assessment</inlineHelpText>
    <label>Total Results</label>
    <summaryForeignKey>Assessment_Result__c.Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>