force-app/main/default/Objects/Assessment__c/recordTypes/Account_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Account_Assessment</fullName>
    <active>true</active>
    <description>Assessment of a specific account</description>
    <label>Account Assessment</label>
</RecordType>