force-app/main/default/Objects/Assessment__c/recordTypes/Contact_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Contact_Assessment</fullName>
    <active>true</active>
    <description>Assessment of a specific contact</description>
    <label>Contact Assessment</label>
</RecordType>