force-app/main/default/Objects/Assessment__c/recordTypes/Skill_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Skill_Assessment</fullName>
    <active>true</active>
    <description>Review of contact&apos;s skills based on answering questions</description>
    <label>Skill Assessment</label>
</RecordType>