force-app/main/default/Objects/Assessment__c/recordTypes/Volunteer.recordType-meta.xml
<RecordType>
    <fullName>Volunteer</fullName>
    <active>true</active>
    <description>Assessment of a volunteer</description>
    <label>Volunteer</label>
</RecordType>